--- a/src/sdg/components/CheckFieldGroup/_checkRow.scss
+++ b/src/sdg/components/CheckFieldGroup/_checkRow.scss
@@ -4,10 +4,9 @@
   display: flex;
   align-items: start;
   margin: 0;
+  cursor: pointer;
+  font-weight: normal;
 
-  &:not(:has(input:disabled)):hover {
-    cursor: pointer;
-  }
 
   &:has(input:disabled) {
     color: token-value(color, grey, regular);
@@ -46,105 +45,112 @@
       border-color: token-value(color, grey, light);
     }
   }
+}
 
-  .qc-check-label {
-    @include content-font(md);
+qc-radio-group,
+qc-checkbox-group,
+qc-checkbox {
+  label {
+    @extend %check-row;
+
+    input[type="radio"],
+    input[type="checkbox"] {
+
+      cursor: pointer;
+
+      min-width: token-value(spacer, md);
+      min-height: token-value(spacer, md);
+      max-width: token-value(spacer, md);
+      max-height: token-value(spacer, md);
+      border-width: rem(2);
+
+      flex-grow: 0;
+
+      &:focus {
+        outline: 2px solid token-value(color, blue, light);
+        outline-offset: 0;
+        border-color: token-value(color, blue, dark) !important;
+      }
+
+      &:checked {
+        border-color: token-value(color blue regular);
+      }
+
+    }
   }
 }
 
-.qc-check-row {
-  @extend %check-row;
-  flex-grow: 0;
 
-  input[type="radio"],
-  input[type="checkbox"] {
-    min-width: token-value(spacer, md);
-    min-height: token-value(spacer, md);
-    max-width: token-value(spacer, md);
-    max-height: token-value(spacer, md);
-    border-width: rem(2);
+[tiled] {
+  label {
+    //@extend %check-row;
+    @include qc-formcontrol-box();
+    padding: token-value(spacer, sm);
+    width: 100%;
 
-    &:focus {
-      outline: 2px solid token-value(color, blue, light);
-      outline-offset: 0;
-      border-color: token-value(color, blue, dark) !important;
+    input[type="radio"],
+    input[type="checkbox"] {
+
+      &:focus {
+        outline: none;
+      }
     }
 
-    &:checked {
-      border-color: token-value(color blue regular);
+    &::before {
+      border-style: solid;
+      border-width: rem(1);
+      border-color: token-value(color, grey, light);
     }
 
-    &.qc-compact {
-      margin-top: rem(4);
+    &:hover::before {
+      border-color: token-value(color, blue, light);
+    }
+
+    &:has(input:checked)::before {
+      background-color: token-value(color, blue, pale);
+    }
+
+    &:has(input:disabled)::before {
+      background-color: token-value(color, grey, pale);
+      border-color: token-value(color, grey, light);
     }
   }
+  &[inline] label {
+    width: auto;
+  }
+
 }
 
-.qc-selection-button {
-  @extend %check-row;
-  @include qc-formcontrol-box();
 
-  input[type="radio"],
-  input[type="checkbox"] {
-    min-width: token-value(spacer, sm);
-    min-height: token-value(spacer, sm);
-    margin-top: rem(4);
-    border-width: rem(1);
 
-    &:focus {
-      outline: none;
-    }
-  }
-
-  padding: token-value(spacer, sm);
-
-  &::before {
-    border-style: solid;
-    border-width: rem(1);
-    border-color: token-value(color, grey, light);
-  }
-
-  &:not(:has(input:focus, input:disabled)):hover::before {
-    border-color: token-value(color, blue, light);
-  }
-
-  &:has(input:checked)::before {
-    background-color: token-value(color, blue, pale);
-  }
-
-  &:has(input:disabled)::before {
-    background-color: token-value(color, grey, pale);
-  }
-
-  .qc-check-label {
-    @include content-font(md, semi-bold);
-  }
-}
-
-.qc-compact, [compact] {
-  input[type="radio"],
-  input[type="checkbox"] {
-    min-width: token-value(spacer, sm);
-    min-height: token-value(spacer, sm);
-    max-width: token-value(spacer, sm);
-    max-height: token-value(spacer, sm);
-    border-width: 1px;
-  }
-}
-
-.qc-check-text {
+.qc-tile {
   display: flex;
   flex-direction: column;
   gap: token-value(spacer, xs);
   min-height: token-value(spacer, md);
 }
 
-.qc-check-description {
-  @include content-font(sm);
-  margin: 0;
+.qc-tile-text {
+  font-weight: token-value(font weight semi-bold);
+  min-height: token-value(spacer, md);
 }
 
-.qc-check-row-parent {
-  display: flex;
-  flex-grow: 1;
+.qc-tile-description {
+  @include content-font(sm);
+  display: block;
 }
+
+[compact],
+[tiled] {
+  input[type="radio"],
+  input[type="checkbox"] {
+    min-width: token-value(spacer, sm);
+    min-height: token-value(spacer, sm);
+    max-width: token-value(spacer, sm);
+    max-height: token-value(spacer, sm);
+
+    border-width: 1px;
+    margin-top: rem(4);
+  }
+}
+
