--- a/src/sdg/components/CheckFieldGroup/checkboxTest.html
+++ b/src/sdg/components/CheckFieldGroup/checkboxTest.html
@@ -1,159 +1,256 @@
 
-    <qc-checkbox-group legend="Boutons de sélection"
-                    tiled
-                    column-count="2"
-                    name="tile-1"
-    >
+<qc-checkbox-group legend="Boutons de sélection"
+                tiled
+                column-count="2"
+>
+    <label>
+        <input type="checkbox"
+               name="tile-1"
+               value="1"
+               checked
+        />
+        <span class="qc-tile">
+                <span class="qc-tile-text">Option 1</span>
+                <span class="qc-tile-description">Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection.</span>
+            </span>
+    </label>
+
+    <label>
+        <input type="checkbox"
+               name="tile-1"
+               value="2"
+        />
+        <span class="qc-tile">
+                <span class="qc-tile-text">Option 2</span>
+            </span>
+    </label>
+    <label>
+        <input type="checkbox"
+               name="tile-1"
+               value="3"
+               disabled
+        />
+        <span class="qc-tile">
+                <span class="qc-tile-text">Option 3 (désactivée)</span>
+            </span>
+    </label>
+</qc-checkbox-group>
+
+<qc-checkbox-group legend="Boutons de sélection inline"
+                name="tile-2"
+                tiled
+                inline
+                column-count="2"
+>
+    <label>
+        <input type="checkbox"
+               name="tile-2"
+               value="1"
+               checked
+        />
+        <span class="qc-tile">
+                <span class="qc-tile-text">Option 1</span>
+            </span>
+    </label>
+
+    <label>
+        <input type="checkbox"
+               name="tile-2"
+               value="2"
+        />
+        <span class="qc-tile">
+                <span class="qc-tile-text">Option 2</span>
+            </span>
+    </label>
+    <label>
+        <input type="checkbox"
+               name="tile-2"
+               value="3"
+               disabled
+        />
+        <span class="qc-tile">
+                <span class="qc-tile-text">Option 3 (désactivée)</span>
+            </span>
+    </label>
+</qc-checkbox-group>
+
+<div class="qc-row">
+    <div class="qc-col-sm-12 qc-col-lg-6">
+
+
+
         <qc-checkbox
-                label="Option 1"
-                value="1"
-                checked
-                description="Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection."
-        ></qc-checkbox>
+            required
+        >
+            <label>
+                <input type="checkbox"
+                       name="consentement-1"
+                       value="oui"
+                />
+                <span >J’accepte les conditions d’utilisation</span>
+            </label>
+        </qc-checkbox>
+
         <qc-checkbox
-                label="Option 2"
-                value="2"
-        ></qc-checkbox>
-        <qc-checkbox
-                label="Option 3 (désactivée)"
-                value="3"
-                disabled
-        ></qc-checkbox>
-    </qc-checkbox-group>
-
-    <qc-checkbox-group legend="Boutons de sélection inline"
-                    name="tile-2"
-                    tiled
-                    inline
-                    column-count="2"
-    >
-        <qc-checkbox
-                label="Option 1"
-                value="1"
-                checked
-
-        ></qc-checkbox>
-        <qc-checkbox
-                label="Option 2"
-                value="2"
-        ></qc-checkbox>
-        <qc-checkbox
-                label="Option 3 (désactivée)"
-                value="3"
-                disabled
-        ></qc-checkbox>
-    </qc-checkbox-group>
+                           required
+                           invalid
+        >
+            <label>
+                <input type="checkbox"
+                       name="consentement-2"
+                       value="oui"
+                />
+                <span >J’accepte les conditions d’utilisation</span>
+            </label>
+        </qc-checkbox>
 
 
+        <qc-checkbox-group legend="Exemple de base"
+                        name="base-1"
+        >
+            <label>
+                <input type="checkbox"
+                       name="base-1"
+                       value="1"
+                       checked
+                />
+                <span >Option 1</span>
+            </label>
+            <label>
+                <input type="checkbox"
+                       name="base-1"
+                       value="2"
+                />
+                <span >Option 2</span>
+            </label>
+            <label>
+                <input type="checkbox"
+                       name="base-1"
+                       value="3"
+                       disabled
+                />
+                <span >Option 3 (désactivée)</span>
+            </label>
+        </qc-checkbox-group>
 
-    <div class="qc-row">
-        <div class="qc-col-sm-12 qc-col-lg-6">
-            <qc-checkbox name="consentement-1"
-                         label="J’accepte les conditions d’utilisation"
-                         value="oui"
-                         required></qc-checkbox>
-
-            <qc-checkbox name="consentement-2"
-                         label="J’accepte les conditions d’utilisation"
-                         value="oui"
-                         required
-                         invalid
-                         required></qc-checkbox>
-
-            <qc-checkbox-group legend="Exemple de base"
-                            name="base-1"
-            >
-                <qc-checkbox
-                        label="Option 1"
-                        value="1"
-                        checked
-                ></qc-checkbox>
-                <qc-checkbox
-                        label="Option 2"
-                        value="2"
-                ></qc-checkbox>
-                <qc-checkbox
-                        label="Option 3 (désactivée)"
-                        value="3"
-                        disabled
-                ></qc-checkbox>
-            </qc-checkbox-group>
-
-            <qc-checkbox-group legend="Invalid"
-                            name="base-1"
-                            invalid
-                               required
-            >
-                <qc-checkbox
-                        label="Option 1"
-                        value="1"
-                ></qc-checkbox>
-                <qc-checkbox
-                        label="Option 2"
-                        value="2"
-                ></qc-checkbox>
-                <qc-checkbox
-                        label="Option 3 (désactivée)"
-                        value="3"
-                        disabled
-                ></qc-checkbox>
-            </qc-checkbox-group>
-        </div>
-        <div class="qc-col-sm-12 qc-col-lg-6">
-            <qc-checkbox name="consentement-1"
-                         label="J’accepte les conditions d’utilisation"
-                         value="oui"
-                         compact
-                         required></qc-checkbox>
-
-            <qc-checkbox name="consentement-2"
-                         label="J’accepte les conditions d’utilisation"
-                         value="oui"
-                         compact
-                         invalid
-                         required></qc-checkbox>
-
-            <qc-checkbox-group legend="Compact"
-                            name="compact-1"
-                            compact
-            >
-                <qc-checkbox
-                        label="Option 1"
-                        value="1"
-                        checked
-                ></qc-checkbox>
-                <qc-checkbox
-                        label="Option 2"
-                        value="2"
-                ></qc-checkbox>
-                <qc-checkbox
-                        label="Option 3 (désactivée)"
-                        value="3"
-                        disabled
-                ></qc-checkbox>
-            </qc-checkbox-group>
-
-            <qc-checkbox-group legend="Invalid"
-                            name="compact-2"
-                            compact
-                            invalid
-                               required
-            >
-                <qc-checkbox
-                        label="Option 1"
-                        value="1"
-                ></qc-checkbox>
-                <qc-checkbox
-                        label="Option 2"
-                        value="2"
-                ></qc-checkbox>
-                <qc-checkbox
-                        label="Option 3 (désactivée)"
-                        value="3"
-                        disabled
-                ></qc-checkbox>
-            </qc-checkbox-group>
-        </div>
+        <qc-checkbox-group legend="Invalid"
+                        name="base-1"
+                        invalid
+                           required
+        >
+            <label>
+                <input type="checkbox"
+                       value="1"
+                       name="base-2"
+                />
+                <span >Option 1</span>
+            </label>
+            <label>
+                <input type="checkbox"
+                       name="base-2"
+                       value="2"
+                />
+                <span >Option 2</span>
+            </label>
+            <label>
+                <input type="checkbox"
+                       name="base-2"
+                       value="3"
+                       disabled
+                />
+                <span >Option 3 (désactivée)</span>
+            </label>
+        </qc-checkbox-group>
     </div>
+    <div class="qc-col-sm-12 qc-col-lg-6">
+        <qc-checkbox compact
+                     required
+        >
+            <label>
+                <input type="checkbox"
+                       name="consentement-compact-1"
+                       value="oui"
+                />
+                <span >J’accepte les conditions d’utilisation</span>
+            </label>
+        </qc-checkbox>
+
+
+
+        <qc-checkbox
+                compact
+               invalid
+               required
+        >
+            <label>
+                <input type="checkbox"
+                       name="consentement-compact-2"
+                       value="oui"
+                />
+                <span >J’accepte les conditions d’utilisation</span>
+            </label>
+        </qc-checkbox>
+
+        <qc-checkbox-group legend="Compact"
+                        name="compact-1"
+                        compact
+        >
+            <label>
+                <input type="checkbox"
+                       name="compact-1"
+                       value="1"
+                       checked
+                />
+                <span >Option 1</span>
+            </label>
+            <label>
+                <input type="checkbox"
+                       name="compact-1"
+                       value="2"
+                />
+                <span >Option 2</span>
+            </label>
+            <label>
+                <input type="checkbox"
+                       name="compact-1"
+                       value="3"
+                       disabled
+                />
+                <span >Option 3 (désactivée)</span>
+            </label>
+        </qc-checkbox-group>
+
+        <qc-checkbox-group legend="Invalid"
+                        name="compact-2"
+                        compact
+                        invalid
+                        required
+        >
+            <label>
+                <input type="checkbox"
+                       name="compact-2"
+                       value="1"
+                />
+                <span >Option 1</span>
+            </label>
+            <label>
+                <input type="checkbox"
+                       name="compact-2"
+                       value="2"
+                />
+                <span >Option 2</span>
+            </label>
+            <label>
+                <input type="checkbox"
+                       name="compact-2"
+                       value="3"
+                       disabled
+                />
+                <span >Option 3 (désactivée)</span>
+            </label>
+        </qc-checkbox-group>
+    </div>
+</div>
+
 
 
