--- a/src/sdg/components/CheckFieldGroup/radiosTest.html
+++ b/src/sdg/components/CheckFieldGroup/radiosTest.html
@@ -2,23 +2,38 @@
     <qc-radio-group legend="Boutons de sélection"
                     tiled
                     column-count="2"
-                    name="tile-1"
     >
-        <qc-radio-button
-                label="Option 1"
-                value="1"
-                checked
-                description="Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection."
-        ></qc-radio-button>
-        <qc-radio-button
-                label="Option 2"
-                value="2"
-        ></qc-radio-button>
-        <qc-radio-button
-                label="Option 3 (désactivée)"
-                value="3"
-                disabled
-        ></qc-radio-button>
+        <label>
+            <input type="radio"
+                   name="tile-1"
+                   value="1"
+                   checked
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 1</span>
+                <span class="qc-tile-description">Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection.</span>
+            </span>
+        </label>
+
+        <label>
+            <input type="radio"
+                   name="tile-1"
+                   value="2"
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 2</span>
+            </span>
+        </label>
+        <label>
+            <input type="radio"
+                   name="tile-1"
+                   value="3"
+                   disabled
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 3 (désactivée)</span>
+            </span>
+        </label>
     </qc-radio-group>
 
     <qc-radio-group legend="Boutons de sélection inline"
@@ -27,21 +42,36 @@
                     inline
                     column-count="2"
     >
-        <qc-radio-button
-                label="Option 1"
-                value="1"
-                checked
+        <label>
+            <input type="radio"
+                   name="tile-2"
+                   value="1"
+                   checked
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 1</span>
+            </span>
+        </label>
 
-        ></qc-radio-button>
-        <qc-radio-button
-                label="Option 2"
-                value="2"
-        ></qc-radio-button>
-        <qc-radio-button
-                label="Option 3 (désactivée)"
-                value="3"
-                disabled
-        ></qc-radio-button>
+        <label>
+            <input type="radio"
+                   name="tile-2"
+                   value="2"
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 2</span>
+            </span>
+        </label>
+        <label>
+            <input type="radio"
+                   name="tile-2"
+                   value="3"
+                   disabled
+            />
+            <span class="qc-tile">
+                <span class="qc-tile-text">Option 3 (désactivée)</span>
+            </span>
+        </label>
     </qc-radio-group>
 
     <div class="qc-row">
@@ -49,20 +79,29 @@
             <qc-radio-group legend="Exemple de base"
                             name="base-1"
             >
-                <qc-radio-button
-                        label="Option 1"
-                        value="1"
-                        checked
-                ></qc-radio-button>
-                <qc-radio-button
-                        label="Option 2"
-                        value="2"
-                ></qc-radio-button>
-                <qc-radio-button
-                        label="Option 3 (désactivée)"
-                        value="3"
-                        disabled
-                ></qc-radio-button>
+                <label>
+                    <input type="radio"
+                           name="base-1"
+                           value="1"
+                           checked
+                    />
+                    <span >Option 1</span>
+                </label>
+                <label>
+                    <input type="radio"
+                           name="base-1"
+                           value="2"
+                    />
+                    <span >Option 2</span>
+                </label>
+                <label>
+                    <input type="radio"
+                           name="base-1"
+                           value="3"
+                           disabled
+                    />
+                    <span >Option 3 (désactivée)</span>
+                </label>
             </qc-radio-group>
 
             <qc-radio-group legend="Invalid"
@@ -70,19 +109,28 @@
                             invalid
                             required
             >
-                <qc-radio-button
-                        label="Option 1"
-                        value="1"
-                ></qc-radio-button>
-                <qc-radio-button
-                        label="Option 2"
-                        value="2"
-                ></qc-radio-button>
-                <qc-radio-button
-                        label="Option 3 (désactivée)"
-                        value="3"
-                        disabled
-                ></qc-radio-button>
+                <label>
+                    <input type="radio"
+                           value="1"
+                           name="base-2"
+                    />
+                    <span >Option 1</span>
+                </label>
+                <label>
+                    <input type="radio"
+                           name="base-2"
+                           value="2"
+                    />
+                    <span >Option 2</span>
+                </label>
+                <label>
+                    <input type="radio"
+                           name="base-2"
+                           value="3"
+                           disabled
+                    />
+                    <span >Option 3 (désactivée)</span>
+                </label>
             </qc-radio-group>
         </div>
         <div class="qc-col-sm-12 qc-col-lg-6">
@@ -90,20 +138,29 @@
                             name="compact-1"
                             compact
             >
-                <qc-radio-button
-                        label="Option 1"
-                        value="1"
-                        checked
-                ></qc-radio-button>
-                <qc-radio-button
-                        label="Option 2"
-                        value="2"
-                ></qc-radio-button>
-                <qc-radio-button
-                        label="Option 3 (désactivée)"
-                        value="3"
-                        disabled
-                ></qc-radio-button>
+                <label>
+                    <input type="radio"
+                           name="compact-1"
+                           value="1"
+                           checked
+                    />
+                    <span >Option 1</span>
+                </label>
+                <label>
+                    <input type="radio"
+                           name="compact-1"
+                           value="2"
+                    />
+                    <span >Option 2</span>
+                </label>
+                <label>
+                    <input type="radio"
+                           name="compact-1"
+                           value="3"
+                           disabled
+                    />
+                    <span >Option 3 (désactivée)</span>
+                </label>
             </qc-radio-group>
 
             <qc-radio-group legend="Invalid"
@@ -112,19 +169,25 @@
                             invalid
                             required
             >
-                <qc-radio-button
-                        label="Option 1"
-                        value="1"
-                ></qc-radio-button>
-                <qc-radio-button
-                        label="Option 2"
-                        value="2"
-                ></qc-radio-button>
-                <qc-radio-button
-                        label="Option 3 (désactivée)"
-                        value="3"
-                        disabled
-                ></qc-radio-button>
+                <label>
+                    <input type="radio"
+                           value="1"
+                    />
+                    <span >Option 1</span>
+                </label>
+                <label>
+                    <input type="radio"
+                           value="2"
+                    />
+                    <span >Option 2</span>
+                </label>
+                <label>
+                    <input type="radio"
+                           value="3"
+                           disabled
+                    />
+                    <span >Option 3 (désactivée)</span>
+                </label>
             </qc-radio-group>
         </div>
     </div>
