Doc - maj de la documentation bouton et icônes

--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -116,7 +116,7 @@
             <td>icon</td>
             <td>Texte</td>
             <td>""</td>
-            <td>Nom d’une icône présente dans la librairie du projet.</td>
+            <td>Nom d’une icône présente dans la librairie du projet. (voir la section <a href="#icons">icônes</a>)</td>
         </tr>
         <tr>
             <td>icon-position</td>
