Radios - maj des tests

--- a/src/sdg/components/CheckFieldGroup/radiosTest.html
+++ b/src/sdg/components/CheckFieldGroup/radiosTest.html
@@ -2,6 +2,7 @@
     <qc-radio-group legend="Boutons de sélection"
                     tiled
                     column-count="2"
+                    name="tile-1"
     >
         <qc-radio-button
                 label="Option 1"
@@ -21,6 +22,7 @@
     </qc-radio-group>
 
     <qc-radio-group legend="Boutons de sélection inline"
+                    name="tile-2"
                     tiled
                     inline
                     column-count="2"
@@ -45,7 +47,7 @@
     <div class="qc-row">
         <div class="qc-col-sm-12 qc-col-lg-6">
             <qc-radio-group legend="Exemple de base"
-                            
+                            name="base-1"
             >
                 <qc-radio-button
                         label="Option 1"
@@ -64,6 +66,7 @@
             </qc-radio-group>
 
             <qc-radio-group legend="Invalid"
+                            name="base-1"
                             invalid
             >
                 <qc-radio-button
@@ -83,7 +86,7 @@
         </div>
         <div class="qc-col-sm-12 qc-col-lg-6">
             <qc-radio-group legend="Compact"
-                            
+                            name="compact-1"
                             compact
             >
                 <qc-radio-button
@@ -103,7 +106,7 @@
             </qc-radio-group>
 
             <qc-radio-group legend="Invalid"
-                            
+                            name="compact-2"
                             compact
                             invalid
             >
