Ajustement des couleurs de focus et sélection pour les respects de contrastes requis

--- a/src/sdg/components/DropdownList/DropdownListItems/DropdownListItemsSingle/_dropdownListItemsSingle.scss
+++ b/src/sdg/components/DropdownList/DropdownListItems/DropdownListItemsSingle/_dropdownListItemsSingle.scss
@@ -7,6 +7,5 @@
 }
 
 .qc-dropdown-list-single-selected {
-  background-color: token-value(color, blue, regular) !important;
-  color: token-value(color, white);
+  background-color: token-value(color, blue, pale) !important;
 }
