--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2658,8 +2658,7 @@ qc-textfield {
 }
 
 .qc-dropdown-list-single-selected {
-  background-color: var(--qc-color-blue-regular) !important;
-  color: var(--qc-color-white);
+  background-color: var(--qc-color-blue-pale) !important;
 }
 
 .qc-dropdown-list-items {
@@ -2702,11 +2701,11 @@ qc-textfield {
   height: 4rem;
 }
 .qc-dropdown-list-multiple.qc-dropdown-list-active:hover, .qc-dropdown-list-single.qc-dropdown-list-active:hover {
-  background-color: var(--qc-color-blue-pale);
+  background-color: var(--qc-color-grey-pale);
   cursor: pointer;
 }
 .qc-dropdown-list-multiple:focus, .qc-dropdown-list-multiple:has(input[type=checkbox]:focus), .qc-dropdown-list-single:focus, .qc-dropdown-list-single:has(input[type=checkbox]:focus) {
-  outline: 0.2rem solid var(--qc-color-blue-light);
+  outline: 0.2rem solid var(--qc-color-blue-regular);
   outline-offset: -0.2rem;
 }
 
