--- a/src/sdg/components/DropdownList/DropdownListItems/_dropdownListItems.scss
+++ b/src/sdg/components/DropdownList/DropdownListItems/_dropdownListItems.scss
@@ -49,12 +49,12 @@ $min-height: 40;
   height: rem($min-height);
 
   &.qc-dropdown-list-active:hover {
-    background-color: token-value(color, blue, pale);
+    background-color: token-value(color, grey, pale);
     cursor: pointer;
   }
 
   &:focus, &:has(input[type=checkbox]:focus) {
-    outline: rem(2) solid token-value(color, blue, light);
+    outline: rem(2) solid token-value(color, blue, regular);
     outline-offset: -(rem(2));
   }
 }
