--- a/src/sdg/components/CheckFieldGroup/_checkRow.scss
+++ b/src/sdg/components/CheckFieldGroup/_checkRow.scss
@@ -122,7 +122,7 @@
   }
 }
 
-.qc-compact {
+.qc-compact, [compact] {
   input[type="radio"],
   input[type="checkbox"] {
     min-width: token-value(spacer, sm);
