Correction d'erreur de frappe dans la doc

--- a/src/sdg/components/ToggleSwitch/_toggleSwitch.html
+++ b/src/sdg/components/ToggleSwitch/_toggleSwitch.html
@@ -34,7 +34,7 @@
         id="switch-group"
         legend="Préférences de notifications de messages"
         justified
-        max-wdith="25.6rem"
+        max-width="25.6rem"
     >
         <qc-toggle-switch
                 id="nouveaux-messages"
