--- a/src/sdg/scss/utilities/_states.scss
+++ b/src/sdg/scss/utilities/_states.scss
@@ -3,6 +3,7 @@
 .qc-required {
   @include content-font(md, bold);
   color: token-value(color, red, regular);
+  margin-left: rem(3.85); // 8px - espace implicite de 4.15px
 }
 
 .qc-disabled {
