--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -7,7 +7,7 @@ pre {
   margin: 0;
   padding: 0;
   white-space: pre-wrap;
-  overflow: scroll;
+  overflow: auto;
 }
 pre code, pre .qc-code {
   font-family: var(--qc-font-family-code);
