--- a/src/sdg/components/Fieldset/_fieldset.scss
+++ b/src/sdg/components/Fieldset/_fieldset.scss
@@ -51,6 +51,10 @@ $invalid-border-width: 2px;
   @include media-mobile() {
     grid-template-columns: 1fr;
   }
+
+  & > .qc-selection-button {
+    width: 100%
+  }
 }
 
 .qc-field-elements-flex {
