--- a/src/sdg/components/CheckFieldGroup/radiosTest.html
+++ b/src/sdg/components/CheckFieldGroup/radiosTest.html
@@ -68,6 +68,7 @@
             <qc-radio-group legend="Invalid"
                             name="base-1"
                             invalid
+                            required
             >
                 <qc-radio-button
                         label="Option 1"
@@ -109,6 +110,7 @@
                             name="compact-2"
                             compact
                             invalid
+                            required
             >
                 <qc-radio-button
                         label="Option 1"
