--- a/src/sdg/components/ChoiceGroup/checkboxTest.html
+++ b/src/sdg/components/ChoiceGroup/checkboxTest.html
@@ -1,5 +1,5 @@
 
-<qc-checkbox-group legend="Boutons de sélection"
+<qc-choice-group legend="Boutons de sélection"
                 tiled
                 column-count="2"
 >
@@ -34,9 +34,9 @@
                 <span class="qc-tile-text">Option 3 (désactivée)</span>
             </span>
     </label>
-</qc-checkbox-group>
+</qc-choice-group>
 
-<qc-checkbox-group legend="Boutons de sélection inline"
+<qc-choice-group legend="Boutons de sélection inline"
                 name="tile-2"
                 tiled
                 inline
@@ -72,7 +72,7 @@
                 <span class="qc-tile-text">Option 3 (désactivée)</span>
             </span>
     </label>
-</qc-checkbox-group>
+</qc-choice-group>
 
 <div class="qc-row">
     <div class="qc-col-sm-12 qc-col-lg-6">
@@ -105,7 +105,7 @@
         </qc-checkbox>
 
 
-        <qc-checkbox-group legend="Exemple de base"
+        <qc-choice-group legend="Exemple de base"
                         name="base-1"
         >
             <label>
@@ -131,9 +131,9 @@
                 />
                 <span >Option 3 (désactivée)</span>
             </label>
-        </qc-checkbox-group>
+        </qc-choice-group>
 
-        <qc-checkbox-group legend="Invalid"
+        <qc-choice-group legend="Invalid"
                         name="base-1"
                         invalid
                            required
@@ -160,7 +160,7 @@
                 />
                 <span >Option 3 (désactivée)</span>
             </label>
-        </qc-checkbox-group>
+        </qc-choice-group>
     </div>
     <div class="qc-col-sm-12 qc-col-lg-6">
         <qc-checkbox compact
@@ -191,7 +191,7 @@
             </label>
         </qc-checkbox>
 
-        <qc-checkbox-group legend="Compact"
+        <qc-choice-group legend="Compact"
                         name="compact-1"
                         compact
         >
@@ -218,9 +218,9 @@
                 />
                 <span >Option 3 (désactivée)</span>
             </label>
-        </qc-checkbox-group>
+        </qc-choice-group>
 
-        <qc-checkbox-group legend="Invalid"
+        <qc-choice-group legend="Invalid"
                         name="compact-2"
                         compact
                         invalid
@@ -248,7 +248,7 @@
                 />
                 <span >Option 3 (désactivée)</span>
             </label>
-        </qc-checkbox-group>
+        </qc-choice-group>
     </div>
 </div>
 
