--- a/src/sdg/components/ChoiceGroup/radiosTest.html
+++ b/src/sdg/components/ChoiceGroup/radiosTest.html
@@ -1,5 +1,5 @@
 
-    <qc-radio-group legend="Boutons de sélection"
+    <qc-choice-group legend="Boutons de sélection"
                     tiled
                     column-count="2"
     >
@@ -34,9 +34,9 @@
                 <span class="qc-tile-text">Option 3 (désactivée)</span>
             </span>
         </label>
-    </qc-radio-group>
+    </qc-choice-group>
 
-    <qc-radio-group legend="Boutons de sélection inline"
+    <qc-choice-group legend="Boutons de sélection inline"
                     name="tile-2"
                     tiled
                     inline
@@ -72,11 +72,11 @@
                 <span class="qc-tile-text">Option 3 (désactivée)</span>
             </span>
         </label>
-    </qc-radio-group>
+    </qc-choice-group>
 
     <div class="qc-row">
         <div class="qc-col-sm-12 qc-col-lg-6">
-            <qc-radio-group legend="Exemple de base"
+            <qc-choice-group legend="Exemple de base"
                             name="base-1"
             >
                 <label>
@@ -102,9 +102,9 @@
                     />
                     <span >Option 3 (désactivée)</span>
                 </label>
-            </qc-radio-group>
+            </qc-choice-group>
 
-            <qc-radio-group legend="Invalid"
+            <qc-choice-group legend="Invalid"
                             name="base-1"
                             invalid
                             required
@@ -131,10 +131,10 @@
                     />
                     <span >Option 3 (désactivée)</span>
                 </label>
-            </qc-radio-group>
+            </qc-choice-group>
         </div>
         <div class="qc-col-sm-12 qc-col-lg-6">
-            <qc-radio-group legend="Compact"
+            <qc-choice-group legend="Compact"
                             name="compact-1"
                             compact
             >
@@ -161,9 +161,9 @@
                     />
                     <span >Option 3 (désactivée)</span>
                 </label>
-            </qc-radio-group>
+            </qc-choice-group>
 
-            <qc-radio-group legend="Invalid"
+            <qc-choice-group legend="Invalid"
                             name="compact-2"
                             compact
                             invalid
@@ -188,7 +188,7 @@
                     />
                     <span >Option 3 (désactivée)</span>
                 </label>
-            </qc-radio-group>
+            </qc-choice-group>
         </div>
     </div>
 
